--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KidzCorner</title>
-
-    <script type="module" src="/src/main.jsx"></script>
-    <link rel="stylesheet" href="/src/index.css">    
-
+    <title>KidzCorner</title>    
+    <script type="module" crossorigin src="./assets/index.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/index.css">
   </head>
   <body>
     <div id="root"></div>
@@ -16,3 +14,4 @@
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
+
